# beer-bot

./: .gitignore  README.md  requirements.txt
src/autonomous_rover/: package.xml  setup.py
src/autonomous_rover/autonomous_rover/description/config/: diff_drive_controller.yaml  geometry.yaml  inertial_params.yaml  payloads.yaml  ros_gz_bridge.yaml
src/autonomous_rover/autonomous_rover/description/meshes/: wheel.stl
src/autonomous_rover/autonomous_rover/description/urdf/: wave_rover.gazebo.xacro  wave_rover.ros2_control.xacro  wave_rover.urdf.xacro
src/autonomous_rover/autonomous_rover/launch/: bringup_pi.launch.py  bringup_sim.launch.py  sim_gz.launch.py
src/autonomous_rover/autonomous_rover/nodes/camera/: calibrate_camera.py  calibration.py  camera_node.py
src/autonomous_rover/autonomous_rover/nodes/e_comms/: e_comms_node.py
src/autonomous_rover/autonomous_rover/nodes/localization/: compile_qnn.py  depth.py  localization_node.py  overlay.py  projection.py
src/autonomous_rover/autonomous_rover/params/: camera.yaml  camera_calib.yaml  e_comms.yaml  localization.yaml  master.yaml  pathfinder.yaml  safety.yaml  system.yaml
src/autonomous_rover/scripts/: build_inertial_prior.py  process_meshes.py
src/autonomous_rover/test/: conftest.py  test_calib_api.py  test_calib_camera.py  test_calib_gitpush.py  test_calib_model.py  test_camera.py  test_depth_affine.py  test_e_comms.py  test_inertial_params.py  test_localization_core.py  test_localization_node.py  test_master_api.py  test_mesh_outputs.py  test_nodes.py  test_teleop_passthrough.py  test_urdf.py
(+31 files in other folders)
